# R2S3D_PoseKit

./: .gitignore  NOTICE.md  README.md  pyproject.toml
configs/: example_gt_objects.json
docs/: foundationpose_patch.md
examples/etot_prepared_iter8/: README.md  gt_objects_4.json
examples/etot_prepared_iter8/camera_data/: depth_0.npy  extrinsics_0.npy  intrinsics_0.npy  object_0_pose_world_abs.npy  object_1_pose_world_abs.npy  object_2_pose_world_abs.npy  object_4_pose_world_abs.npy  object_poses_0.json
examples/etot_prepared_iter8/gt_meshes/: holder_black.glb  holder_white.glb  pen.glb
examples/etot_prepared_iter8/prepared_fp_inputs/object_0/mesh/: 0.glb
examples/etot_prepared_iter8/prepared_fp_inputs/object_1/: cam_K.txt
patches/foundationpose/: Utils.py  adjust_pose.py
scripts/: evaluate_reconstruction.py  install_foundationpose_patches.py  prepare_workspace.py  render_camera_overlap.py  run_dataset_pipeline.sh  run_pipeline.py  run_prepared_fp_pipeline.py  run_sam3d_reconstruction.py
src/r2s3d_posekit/: __init__.py  eval_utils.py  input_prep.py
